--- a/hackerhotel/calendar_config.example.json
+++ b/hackerhotel/calendar_config.example.json
@@ -1,6 +1,6 @@
 [
   {
-    "#: calendar_config.json should contain a list, containing one entry per calendar to load",
+    "#": "calendar_config.json should contain a list, containing one entry per calendar to load",
     "username": "<username>",
     "password": "<password>",
     "name": "Personal (the name to refer to)",
